<resources>
    <string name="app_name">TP2</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoicnlsb2ciLCJhIjoiY2wwMzV6ODM2MHpneDNpcWcwdnZsd2FqaSJ9.KZ3tA7KMZ08xWSRtXhDQyw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stats">Stats</string>
    <string name="profile">Profile</string>
    <string name="swap_theme">Swap Theme</string>
    <string name="change_language">FR</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="magneticField">Magnetic Field: </string>
    <string name="numberSteps">Number of Steps: </string>
    <string name="battery_consumption">Battery Consumption: </string>
    <string name="uplink">Uplink: </string>
    <string name="downlink">Downlink: </string>

</resources>